[package]
name = "eventmesh"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
prost = "0.11.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tonic = "0.8.0"
tokio = { version = "1.0", default-features = false, features = ["time"] }
futures-util = "0.3.23"
futures = "0.3.23"

[build-dependencies]
tonic-build = "0.8.0"
