[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
eventmesh = { path = "../eventmesh" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.5.15"

[[example]]
name = "http-producer-publish"
path = "http-producer-publish.rs"

[[example]]
name = "http-producer-request"
path = "http-producer-request.rs"


[[example]]
name = "grpc-producer-publish"
path = "grpc-producer-publish.rs"

[[example]]
name = "grpc-consumer"
path = "grpc-consumer.rs"

[[example]]
name = "grpc-consumer-stream"
path = "grpc-consumer-stream.rs"
