# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
[package]
name = "eventmesh"
version = "1.9.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "mxsm <mxsm@apache.org>"
]
description = "Rust client for Apache EventMesh"
license = "Apache-2.0"
keywords = ["EventMesh", "SDK", "rust-client", "rust", "eventmesh-rust-sdk"]
readme = "./README.md"
homepage      = "https://github.com/apache/eventmesh"
repository    = "https://github.com/apache/eventmesh"

[features]
default = ["grpc","eventmesh_message"]
full = ["grpc","eventmesh_message"]
eventmesh_message=[]
tls=[]
grpc=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# common
anyhow = "1.0"

#Rust grpc
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

#tokio
tokio = { version = "1.32.0", features = ["full"] }

#serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#log
tracing = "0.1"
tracing-subscriber = "0.3"

# tools crate
thiserror = "1.0"
bytes = "1"
rand = "0.8"
uuid = { version = "1.4.1", features = ["v4"] }
local-ip-address = "0.5.6"
futures = "0.3"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.10"

[[example]]
name = "producer_example"
path = "examples/grpc/producer_example.rs"
required-features = ["grpc","eventmesh_message"]

[[example]]
name = "consumer_example"
path = "examples/grpc/consumer_example.rs"
required-features = ["grpc","eventmesh_message"]